[package]
name = "tqdm"
edition = "2021"
version = "0.6.0"
rust-version = "1.60"

readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Python tqdm in Rust"
repository = "https://github.com/mrlazy1708/tqdm"
documentation = "https://docs.rs/tqdm/latest/tqdm"

authors = ["yihengdu"]
keywords = ["tqdm", "progress", "iterator"]
categories = ["accessibility", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
crossterm = "0.25"
once_cell = { version = "1.18.0", default-features = false, features = ["alloc", "parking_lot", "std"] }
